--- a/CMPUT301W15T12/res/layout/activity_view_photo.xml
+++ b/CMPUT301W15T12/res/layout/activity_view_photo.xml
@@ -8,9 +8,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ViewPhotoActivity" >
 
-    <TextView
+    <ImageView
+        android:id="@+id/receiptImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
