adds test cases inside ViewphotoActivityTest

--- a/CMPUT301W15T12/res/layout/activity_view_photo.xml
+++ b/CMPUT301W15T12/res/layout/activity_view_photo.xml
@@ -15,7 +15,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/ic_launcher" />
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
