--- a/CMPUT301W15T12/res/layout/claimant_claim_page.xml
+++ b/CMPUT301W15T12/res/layout/claimant_claim_page.xml
@@ -4,42 +4,51 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/textApproverStarttoEndDate"
+        android:id="@+id/textStarttoEndDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textApproverClaimName"
+        android:layout_below="@+id/textClaimName"
         android:gravity="center"
         android:text="@string/Date_Date"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#000" />
 
     <ListView
-        android:id="@+id/ApproverlistExpenseItems"
+        android:id="@+id/listExpenseItems"
         android:layout_width="fill_parent"
-        android:layout_height="150dp"
-        android:layout_above="@+id/buttonAddComment"
+        android:layout_height="125dp"
+        android:layout_above="@+id/buttonAddItem"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/ApproverlistTotalSum"
+        android:layout_below="@+id/listTotalSum"
         android:visibility="visible" >
 
     </ListView>
 
     <ListView
-        android:id="@+id/ApproverlistTotalSum"
+        android:id="@+id/listTotalSum"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textApproverClaimDescription"
+        android:layout_below="@+id/textClaimDestinations"
         android:visibility="visible" >
     </ListView>
 
+    <Button
+        android:id="@+id/buttonAddItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:text="@string/Add_Expense_Item" />
+
     <TextView
-        android:id="@+id/textApproverClaimName"
+        android:id="@+id/textClaimName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -53,42 +62,26 @@
         android:textColor="#000" />
 
     <TextView
-        android:id="@+id/textApproverClaimDescription"
+        android:id="@+id/textClaimDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textApproverStarttoEndDate"
+        android:layout_below="@+id/textStarttoEndDate"
         android:gravity="center"
         android:text="@string/Description"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#000" />
 
-    <Button
-        android:id="@+id/buttonApproverApprove"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:text="@string/approverApprove" />
-
-    <Button
-        android:id="@+id/buttonApproverReturn"
+    <TextView
+        android:id="@+id/textClaimDestinations"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@+id/buttonApproverApprove"
-        android:text="@string/approverReturn" />
-
-    <Button
-        android:id="@+id/buttonAddComment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonApproverApprove"
         android:layout_alignParentLeft="true"
+        android:gravity="center"
         android:layout_alignParentRight="true"
-        android:text="@string/approverAddComment" />
+        android:layout_below="@+id/textClaimDescription"
+        android:text="@string/destinations" />
 
 </RelativeLayout>
