--- a/CMPUT301W15T12/res/layout/view_photo.xml
+++ b/CMPUT301W15T12/res/layout/view_photo.xml
@@ -15,6 +15,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/receipt_photo" />
 
 </RelativeLayout>
