--- a/CMPUT301W15T12/res/layout/add_item.xml
+++ b/CMPUT301W15T12/res/layout/add_item.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/editDate"
+        android:layout_below="@+id/editItemDate"
         android:layout_marginTop="29dp"
         android:ems="10"
         android:hint="@string/Enter_Description"
@@ -65,7 +65,7 @@
         android:hint="@string/Enter_Category" />
 
     <EditText
-        android:id="@+id/editDate"
+        android:id="@+id/editItemDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
