--- a/CMPUT301W15T12/res/layout/add_comments.xml
+++ b/CMPUT301W15T12/res/layout/add_comments.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent" >
 
     <EditText
-        android:id="@+id/editItemDescription"
+        android:id="@+id/editAddComments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonEditItemDone"
+        android:layout_above="@+id/buttonAddCommentsDone"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
@@ -19,7 +19,7 @@
     </EditText>
 
     <Button
-        android:id="@+id/buttonEditItemDone"
+        android:id="@+id/buttonAddCommentsDone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
