--- a/CMPUT301W15T12/res/layout/see_comments.xml
+++ b/CMPUT301W15T12/res/layout/see_comments.xml
@@ -14,7 +14,7 @@
         android:text="@string/comments" />
 
     <Button
-        android:id="@+id/buttonEditItemDone"
+        android:id="@+id/buttonSeeCommentsDone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -26,7 +26,7 @@
         android:id="@+id/textSeeCommentsApprovers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonEditItemDone"
+        android:layout_above="@+id/buttonSeeCommentsDone"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textComments"
