worked on activities

--- a/CMPUT301W15T12/res/layout/view_photo.xml
+++ b/CMPUT301W15T12/res/layout/view_photo.xml
@@ -12,10 +12,19 @@
         android:id="@+id/receiptImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/buttonViewPictureDone"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/receipt_photo" />
+
+    <Button
+        android:id="@+id/buttonViewPictureDone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:text="@string/Done" />
 
 </RelativeLayout>
