--- a/CMPUT301W15T12/res/layout/choose_list.xml
+++ b/CMPUT301W15T12/res/layout/choose_list.xml
@@ -1,22 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/radialgradientback"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ChooseListActivity" >
-
-    <Button
-        android:id="@+id/buttonChooseClaimant"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="126dp"
-        android:text="@string/choose_claimant" />
 
     <Button
         android:id="@+id/buttonChooseApprover"
@@ -27,5 +18,15 @@
         android:layout_below="@+id/buttonChooseClaimant"
         android:layout_marginTop="68dp"
         android:text="@string/choose_approver" />
+
+    <Button
+        android:id="@+id/buttonChooseClaimant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/buttonChooseApprover"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/buttonChooseApprover"
+        android:layout_marginTop="117dp"
+        android:text="@string/choose_claimant" />
 
 </RelativeLayout>
