flag checkbox set by user

--- a/CMPUT301W15T12/res/layout/item_page.xml
+++ b/CMPUT301W15T12/res/layout/item_page.xml
@@ -105,7 +105,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="@string/Flagged" />
+        android:text="@string/Flagged"
+        android:onClick="onCheckBoxClicked" />
 
 </RelativeLayout>
 
