worked on add claim

--- a/CMPUT301W15T12/res/layout/add_claim.xml
+++ b/CMPUT301W15T12/res/layout/add_claim.xml
@@ -97,6 +97,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:text="@string/Done" />
+        android:text="@string/Done"
+        android:onClick="addClaim" />
 
 </RelativeLayout>
