selecting new expense item currency opens up a menu

--- a/CMPUT301W15T12/res/layout/add_item.xml
+++ b/CMPUT301W15T12/res/layout/add_item.xml
@@ -21,7 +21,7 @@
         android:layout_below="@+id/editItemDescription"
         android:ems="10"
         android:hint="@string/Enter_Amount"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal|numberSigned" />
 
     <EditText
         android:id="@+id/editCurrency"
