working on add claim

--- a/CMPUT301W15T12/res/layout/add_claim.xml
+++ b/CMPUT301W15T12/res/layout/add_claim.xml
@@ -96,7 +96,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:text="@string/Done"
-        android:onClick="addClaim" />
+        android:text="@string/Done" />
 
 </RelativeLayout>
