added missing constraints, made incomplete functions

--- a/CMPUT301W15T12/res/menu/claim.xml
+++ b/CMPUT301W15T12/res/menu/claim.xml
@@ -17,7 +17,7 @@
     </item>
     <item
         android:id="@+id/submitClaimItem"
-        android:onClick="seeComments"
+        android:onClick="submitClaim"
         android:title="@string/Submit_Claim">
     </item>
     <item
