--- a/CMPUT301W15T12/res/layout/tab_host.xml
+++ b/CMPUT301W15T12/res/layout/tab_host.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-         android:id="@android:id/tabhost"
-         android:layout_width="fill_parent"
-         android:layout_height="fill_parent">
-    <LinearLayout
+ <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+    <TabHost
+        android:id="@android:id/tabhost"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        >
+        <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:padding="5dp">
-        <TabWidget
+            >
+ 
+            <TabWidget
                 android:id="@android:id/tabs"
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
-        <FrameLayout
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                />
+ 
+            <FrameLayout
                 android:id="@android:id/tabcontent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="0"/>
+ 
+            <FrameLayout
+                android:id="@+android:id/realtabcontent"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:padding="5dp" />
-                <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
-        <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:padding="5dp" />
-    </LinearLayout>
-</TabHost>
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+        </LinearLayout>
+    </TabHost>
+</LinearLayout>
