--- a/CMPUT301W15T12/res/layout/add_destinations.xml
+++ b/CMPUT301W15T12/res/layout/add_destinations.xml
@@ -8,9 +8,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AddDestinationsActivity" >
 
-    <TextView
+    <Button
+        android:id="@+id/buttonDoneDestination"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:text="@string/Done" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/buttonDoneDestination"
+        android:ems="10"
+        android:hint="@string/new_destinations" >
+
+        <requestFocus />
+    </EditText>
+
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonDoneDestination"
+        android:layout_alignLeft="@+id/editText1"
+        android:layout_below="@+id/editText1" >
+
+    </ListView>
 
 </RelativeLayout>
