added login password

--- a/CMPUT301W15T12/res/layout/add_destinations.xml
+++ b/CMPUT301W15T12/res/layout/add_destinations.xml
@@ -18,7 +18,7 @@
         android:text="@string/Done" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/editPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -35,8 +35,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/buttonDoneDestination"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_below="@+id/editText1" >
+        android:layout_alignLeft="@+id/editPassword"
+        android:layout_below="@+id/editPassword" >
 
     </ListView>
 
