--- a/CMPUT301W15T12/res/layout/login_main.xml
+++ b/CMPUT301W15T12/res/layout/login_main.xml
@@ -49,4 +49,15 @@
         android:layout_alignParentRight="true"
         android:text="@string/login" />
 
+    <EditText
+        android:id="@+id/editPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editLoginUserName"
+        android:layout_alignRight="@+id/editLoginUserName"
+        android:layout_centerVertical="true"
+        android:ems="10"
+        android:hint="@string/ep"
+        android:inputType="textPassword" />
+
 </RelativeLayout>
