--- a/CMPUT301W15T12/res/layout/login_main.xml
+++ b/CMPUT301W15T12/res/layout/login_main.xml
@@ -17,20 +17,6 @@
         android:text="@string/login"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <EditText
-        android:id="@+id/editLoginUserName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/textLogin"
-        android:layout_marginTop="84dp"
-        android:ems="10"
-        android:hint="@string/User_Name" >
-
-        <requestFocus />
-    </EditText>
-
     <Button
         android:id="@+id/buttonNewAccount"
         android:layout_width="wrap_content"
@@ -50,14 +36,32 @@
         android:text="@string/login" />
 
     <EditText
+        android:id="@+id/editLoginUserName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textLogin"
+        android:layout_alignRight="@+id/buttonLogin"
+        android:layout_below="@+id/textLogin"
+        android:layout_marginTop="152dp"
+        android:ems="10"
+        android:fontFamily="sans-serif"
+        android:hint="@string/User_Name"
+        android:typeface="normal" >
+
+        <requestFocus />
+    </EditText>
+
+    <EditText
         android:id="@+id/editPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editLoginUserName"
-        android:layout_alignRight="@+id/editLoginUserName"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="@string/ep"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:typeface="normal" />
 
 </RelativeLayout>
