--- a/CMPUT301W15T12/res/layout/add_destinations.xml
+++ b/CMPUT301W15T12/res/layout/add_destinations.xml
@@ -58,6 +58,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:text="@string/save" />
+        android:text="@string/back" />
 
 </RelativeLayout>
