--- a/CMPUT301W15T12/res/layout/add_item.xml
+++ b/CMPUT301W15T12/res/layout/add_item.xml
@@ -31,19 +31,9 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/editAmount"
         android:ems="10"
+        android:focusableInTouchMode="false"
         android:hint="@string/Enter_Currency"
-        android:onClick="currencyOnClick"
-        android:focusableInTouchMode="false" />
-
-    <Button
-        android:id="@+id/buttonAddImage"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonEditItemDone"
-        android:layout_below="@+id/editCurrency"
-        android:layout_centerHorizontal="true"
-        android:onClick="addImage"
-        android:text="@string/Add_Image" />
+        android:onClick="currencyOnClick" />
 
     <EditText
         android:id="@+id/editItemDescription"
@@ -65,9 +55,9 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/editItemName"
         android:ems="10"
+        android:focusableInTouchMode="false"
         android:hint="@string/Enter_Category"
-        android:onClick="categoryOnClick" 
-        android:focusableInTouchMode="false"/>
+        android:onClick="categoryOnClick" />
 
     <EditText
         android:id="@+id/editItemDate"
@@ -92,7 +82,34 @@
         android:layout_marginTop="14dp"
         android:ems="10"
         android:hint="@string/Enter_Expense_Name" />
+
     <requestFocus />
 
+    <Button
+        android:id="@+id/buttonAddImage"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/editCurrency"
+        android:onClick="addImage"
+        android:text="@string/Add_Image" />
+
+    <Button
+        android:id="@+id/buttonChooseLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/buttonAddImage"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/buttonAddImage"
+        android:text="@string/ChooseGeolocation" />
+
+    <Button
+        android:id="@+id/buttonDeleteImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonEditItemDone"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/buttonAddImage"
+        android:text="@string/Delete_Photo" />
 
 </RelativeLayout>
